# Platformski-nezavisno-programiranje

./: CMakeLists.txt  main.cpp  widget.cpp  widget.h  widget.ui
